--- a/src/TechJobs/Views/List/Jobs.cshtml
+++ b/src/TechJobs/Views/List/Jobs.cshtml
@@ -5,3 +5,16 @@
 @{ 
     // TODO #3 - Use the same list display from Views/Search/Index.cshtml 
 }
+
+@foreach (var job in ViewBag.jobs)
+{
+    <table class="job-listing">
+        @foreach (var field in job)
+        {
+            <tr>
+                <td>@field.Key: </td>
+                <td>@field.Value</td>
+            </tr>
+        }
+    </table>
+}
