--- a/src/TechJobs/Views/List/Jobs.cshtml
+++ b/src/TechJobs/Views/List/Jobs.cshtml
@@ -6,23 +6,6 @@
     // TODO #3 - Use the same list display from Views/Search/Index.cshtml 
 }
 
-@foreach (var job in ViewBag.jobs)
-{
-    <table class="job-listing">
-        @foreach (var field in job)
-        {
-            <tr>
-                <td>@field.Key: </td>
+@Html.Partial("~/Views/Shared/ResultsPartial.cshtml")
 
-                @if (field.Key != "name")
-                {
-                    <td><a asp-controller="List" asp-action="Jobs" asp-route-column="@field.Key" asp-route-value="@field.Value">@field.Value</a></td>
-                }
-                else
-                {
-                    <td>@field.Value</td>
-                }
-            </tr>
-        }
-    </table>
 }
